feat(web): 실시간 3D 은하계 시각화 및 노드 상호작용 구현